frontend-service/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
  namespace: preprod
spec:
  selector:
   app: frontend-app
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
  type: ClusterIP
